--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="projects.nerdybuzz.catchdrop.android"
-    android:versionCode="1"
-    android:versionName="0.1.0a" >
+    android:versionCode="3"
+    android:versionName="0.2.0 (alpha)" >
 
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="20" />
 
