Changed package name cause I lost my keystore :(

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -63,7 +63,7 @@ task run(type: Exec) {
     }
 
     def adb = path + "/platform-tools/adb"
-    commandLine "$adb", 'shell', 'am', 'start', '-n', 'projects.nerdybuzz.catchdrop.android/projects.nerdybuzz.catchdrop.android.AndroidLauncher'
+    commandLine "$adb", 'shell', 'am', 'start', '-n', 'projects.nerdybuzz.catchdrop.droidapp/projects.nerdybuzz.catchdrop.droidapp.AndroidLauncher'
 }
 
 // sets up the Android Eclipse project, using the old Ant based build.
