--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="projects.nerdybuzz.catchdrop.android"
+    package="projects.nerdybuzz.catchdrop.droidapp"
     android:versionCode="6"
     android:versionName="0.4.4 (alpha)"
     android:installLocation="preferExternal" >
@@ -15,9 +15,9 @@
         android:label="@string/app_name"
         android:theme="@style/GdxTheme" >
         <meta-data android:name="com.google.android.gms.games.APP_ID" android:value="@string/app_id" />
-        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+        <!-- <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" /> -->
         <activity
-            android:name="projects.nerdybuzz.catchdrop.android.AndroidLauncher"
+            android:name="projects.nerdybuzz.catchdrop.droidapp.AndroidLauncher"
             android:label="@string/app_name" 
             android:screenOrientation="sensorLandscape"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
