--- a/android/project.properties
+++ b/android/project.properties
@@ -14,3 +14,4 @@
 target=android-19
 android.library=false
 android.library.reference.1=../BaseGameUtils
+android.library.reference.2=../google-play-services_lib
